--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div id="g_id_signin"></div> <!-- Google renderiza aquí el botón -->
     </div>
 
-    <div id="options" style="display: none;">
+    <div id="options">
+        <h2>Selecciona una opció</h2>
         <a href="admin.html">
             <button>Administrar</button>
         </a>
