--- a/player.html
+++ b/player.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Pyramid (player)</title>
     <link rel="stylesheet" type="text/css" href="css/pyramid.css">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.svg" type="image/x-icon">
 	<script src="js/pyramid.js"></script>
 	<script defer src="js/player.js"></script>
 </head>
