--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html lang="ca">
-<head>
-    <meta charset="UTF-8">
-    <title>Pyramid</title>
-    <link rel="stylesheet" type="text/css" href="css/pyramid.css">
-	<link rel="icon" href="favicon.svg" type="image/x-icon">
-</head>
-<body>
-
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stars Hunters</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f0f0f0;
+        margin: 0;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+      }
+    </style>
+    <link rel="stylesheet" type="text/css" href="css/pyramid.css" />
+    <link rel="icon" href="favicon.svg" type="image/x-icon" />
+  </head>
+  <body>
     <div id="options">
-        <h2>Selecciona una opció</h2>
-        <a href="admin.html">
-            <button>Administrar</button>
-        </a>
-        <a href="player.html">
-            <button>Jugar</button>
-        </a>
+      <h2>Selecciona una opció</h2>
+      <a href="admin.html">
+        <button>Administrar</button>
+      </a>
+      <a href="player.html">
+        <button>Jugar</button>
+      </a>
     </div>
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="js/sauth.js"></script>
-</body>
-
+  </body>
 </html>
