--- a/admin.html
+++ b/admin.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
-<html lang="ca">
-<head>
-    <meta charset="UTF-8">
-    <title>Pyramid (admin)</title>
-    <link rel="stylesheet" type="text/css" href="css/pyramid.css">
-	<link rel="icon" href="favicon.svg" type="image/x-icon">
-	<script src="js/pyramid.js"></script>
-	<script defer src="js/admin.js"></script>
-</head>
-<body>
-	<div>
-		<label for="width">Amplada (640-1280)</label> <input type="number" id="width" step="16" value="640" min="640" max="1280" autofocus /><br>
-		<label for="height">Alçada (480-960)</label> <input type="number" id="height" step="16" value="480" min="480" max="960" /><br>
-		<label for="pisos">Pisos de la piràmide (4-8)</label> <input type="number" id="pisos" step="1" value="8" min="4" max="8" /><br>
-		<button id="configurar">Configurar</button>
-		<button id="engegar">Engegar</button>
-	</div>
-	<div>
-		<svg width="640" height="480" viewbox="0 0 640 480" style="border:1px solid black">
-			<g id="pyramid"></g>
-			<g id="players"></g>
-			<g id="stones"></g>
-		</svg>
-	</div>
-</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stars Hunters - Administrador</title>
+    <link rel="stylesheet" href="css/pyramid.css" />
+    <link rel="icon" href="favicon.svg" type="image/x-icon" />
+  </head>
+  <body>
+    <div id="admin-container">
+      <div id="config-panel">
+        <h3>Panel de Control</h3>
+        <div class="config-item">
+          <label for="width">Ancho:</label>
+          <input type="number" id="width" min="640" max="1280" value="800" />
+        </div>
+        <div class="config-item">
+          <label for="height">Alto:</label>
+          <input type="number" id="height" min="480" max="960" value="600" />
+        </div>
+        <div class="config-item">
+          <label for="pisos">Pisos:</label>
+          <input type="number" id="pisos" min="4" max="8" value="4" />
+        </div>
+        <div class="button-group">
+          <button id="configurar">Configurar</button>
+          <button id="engegar">Engegar</button>
+        </div>
+      </div>
+      <div id="game-view">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="800"
+          height="600"
+          viewBox="0 0 800 600"
+        >
+          <g id="pyramid"></g>
+          <g id="stones"></g>
+          <g id="players"></g>
+        </svg>
+      </div>
+    </div>
+    <script type="module" src="dist/pyramid.js"></script>
+    <script type="module" src="dist/admin.js"></script>
+  </body>
 </html>
