--- a/player.html
+++ b/player.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
-<html lang="ca">
-<head>
-    <meta charset="UTF-8">
-    <title>Pyramid (player)</title>
-    <link rel="stylesheet" type="text/css" href="css/pyramid.css">
-	<link rel="icon" href="favicon.svg" type="image/x-icon">
-	<script src="js/pyramid.js"></script>
-	<script defer src="js/player.js"></script>
-</head>
-<body>
-	<div>
-		<label for="pisos">Pisos de la piràmide</label> <input type="number" id="pisos" step="1" value="8" min="4" max="8" disabled /><br>
-	</div>
-	<div>
-		<svg width="640" height="480" viewbox="0 0 640 480" style="border:1px solid black">
-			<g id="pyramid"></g>
-			<g id="players"></g>
-			<g id="stones"></g>
-		</svg>
-	</div>
-</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stars Hunters - Jugador</title>
+    <link rel="stylesheet" href="css/pyramid.css" />
+    <link rel="icon" href="favicon.svg" type="image/x-icon" />
+  </head>
+  <body>
+    <div id="game-container">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="800"
+        height="600"
+        viewBox="0 0 800 600"
+      >
+        <g id="pyramid"></g>
+        <g id="stones"></g>
+        <g id="players"></g>
+      </svg>
+      <div id="controls">
+        <input type="number" id="pisos" min="4" max="8" value="4" disabled />
+      </div>
+    </div>
+    <script type="module" src="dist/pyramid.js"></script>
+    <script type="module" src="dist/player.js"></script>
+  </body>
 </html>
