--- a/player.html
+++ b/player.html
@@ -6,18 +6,64 @@
     <title>Stars Hunters - Jugador</title>
     <link rel="stylesheet" href="css/pyramid.css" />
     <link rel="icon" href="favicon.svg" type="image/x-icon" />
+    <style>
+      .game-container {
+        display: flex;
+        align-items: flex-start;
+      }
+
+      .side-panel {
+        width: 200px;
+        padding: 10px;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: white;
+        margin-right: 10px;
+        border-radius: 5px;
+        min-height: 600px;
+      }
+
+      #timer-container {
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 20px;
+        text-align: center;
+      }
+
+      #score-container {
+        margin-top: 20px;
+      }
+
+      h3 {
+        margin-top: 0;
+        border-bottom: 1px solid #444;
+        padding-bottom: 5px;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <div id="game-container">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="800"
-        height="600"
-        viewBox="0 0 800 600"
-      >
-        <g id="stones"></g>
-        <g id="players"></g>
-      </svg>
+    <div class="game-container">
+      <div class="side-panel">
+        <h3>INFORMACIÓN</h3>
+        <div id="timer-container">
+          <!-- El temporizador se mostrará aquí -->
+        </div>
+        <h3>PUNTUACIONES</h3>
+        <div id="score-container">
+          <!-- Las puntuaciones se mostrarán aquí -->
+        </div>
+      </div>
+      <div id="game-view">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="800"
+          height="600"
+          viewBox="0 0 800 600"
+        >
+          <g id="stones"></g>
+          <g id="players"></g>
+        </svg>
+      </div>
     </div>
     <script type="module" src="dist/pyramid.js"></script>
     <script type="module" src="dist/player.js"></script>
