HTML & CSS refactor

--- a/admin.html
+++ b/admin.html
@@ -4,42 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stars Hunters - Administrador</title>
-    <link rel="stylesheet" href="css/pyramid.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="favicon.svg" type="image/x-icon" />
-    <style>
-      .game-layout {
-        display: flex;
-        align-items: flex-start;
-      }
-
-      .side-panel {
-        width: 200px;
-        padding: 10px;
-        background-color: rgba(0, 0, 0, 0.7);
-        color: white;
-        margin-right: 10px;
-        border-radius: 5px;
-        min-height: 600px;
-      }
-
-      #timer-container {
-        font-size: 24px;
-        font-weight: bold;
-        margin-bottom: 20px;
-        text-align: center;
-      }
-
-      #score-container {
-        margin-top: 20px;
-      }
-
-      h3 {
-        margin-top: 0;
-        border-bottom: 1px solid #444;
-        padding-bottom: 5px;
-        text-align: center;
-      }
-    </style>
   </head>
   <body>
     <div id="admin-container">
