--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stars Hunters</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
-        margin: 0;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-      }
-    </style>
-    <link rel="stylesheet" type="text/css" href="css/pyramid.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link rel="icon" href="favicon.svg" type="image/x-icon" />
   </head>
   <body>
