Some words swapped to catalan

--- a/player.html
+++ b/player.html
@@ -10,11 +10,11 @@
   <body>
     <div class="game-container">
       <div class="side-panel">
-        <h3>INFORMACIÓN</h3>
+        <h3>INFORMACIÓ</h3>
         <div id="timer-container">
           <!-- El temporizador se mostrará aquí -->
         </div>
-        <h3>PUNTUACIONES</h3>
+        <h3>PUNTUACIONS</h3>
         <div id="score-container">
           <!-- Las puntuaciones se mostrarán aquí -->
         </div>
