--- a/admin.html
+++ b/admin.html
@@ -30,9 +30,8 @@
             class="form-control"
           />
         </div>
-        <!-- Nuevo campo para tiempo límite -->
         <div class="config-item">
-          <label for="timeLimit">Tiempo límite (segundos):</label>
+          <label for="timeLimit">Temps límit (en segons):</label>
           <input
             type="number"
             id="timeLimit"
@@ -49,11 +48,11 @@
       </div>
       <div class="game-layout">
         <div class="side-panel">
-          <h3>INFORMACIÓN</h3>
+          <h3>INFORMACIÓ</h3>
           <div id="timer-container">
             <!-- El temporizador se mostrará aquí -->
           </div>
-          <h3>PUNTUACIONES</h3>
+          <h3>PUNTUACIONS</h3>
           <div id="score-container">
             <!-- Las puntuaciones se mostrarán aquí -->
           </div>
